--- a/KontrolaPristupaDesktop/KontrolaPristupaDesktop/Registracija.xaml
+++ b/KontrolaPristupaDesktop/KontrolaPristupaDesktop/Registracija.xaml
@@ -6,19 +6,22 @@
         xmlns:local="clr-namespace:KontrolaPristupaDesktop"
         mc:Ignorable="d"
         Title="Registracija" Height="450" Width="800">
+    <Window.DataContext>
+        <local:RegistracijaViewModel/>
+    </Window.DataContext>
     <Grid>
         <Label Content="Ime:" HorizontalAlignment="Left" Margin="92,90,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.515,-0.517"/>
         <Label Content="Prezime:" HorizontalAlignment="Left" Margin="69,121,0,0" VerticalAlignment="Top"/>
         <Label Content="RFID:" HorizontalAlignment="Left" Margin="92,59,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.517,-0.464"/>
-        <TextBox x:Name="txtRFID" HorizontalAlignment="Left" Height="23" Margin="148,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162"/>
-        <TextBox x:Name="txtIme" HorizontalAlignment="Left" Height="23" Margin="148,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162"/>
-        <TextBox x:Name="txtPrezime" HorizontalAlignment="Left" Height="23" Margin="148,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162"/>
-        <Button x:Name="btnRegistrirajSe" Content="Registriraj se" HorizontalAlignment="Left" Margin="148,223,0,0" VerticalAlignment="Top" Width="75" Click="BtnRegistrirajSe_Click"/>
-        <Button x:Name="btnDohvatiRFID" Content="Dohvati RFID" HorizontalAlignment="Left" Margin="315,66,0,0" VerticalAlignment="Top" Width="75" Click="BtnDohvatiRFID_Click"/>
-        <Button x:Name="btnUkljuciKameru" Margin="439,66,269,328" Content="Ukljuci kameru" RenderTransformOrigin="0.789,0.054" Click="BtnUkljuciKameru_Click" />
-        <Button x:Name="btnSnimiSliku" Margin="540,68,168,326" Content="Snimi sliku" RenderTransformOrigin="0.789,0.054" Click="BtnSnimiSliku_Click" />
+        <TextBox x:Name="txtRFID" HorizontalAlignment="Left" Height="23" Margin="148,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding RFID}" IsEnabled="False"/>
+        <TextBox x:Name="txtIme" HorizontalAlignment="Left" Height="23" Margin="148,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Ime}"/>
+        <TextBox x:Name="txtPrezime" HorizontalAlignment="Left" Height="23" Margin="148,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Prezime}"/>
+        <Button x:Name="btnRegistrirajSe" Content="Registriraj se" HorizontalAlignment="Left" Margin="148,223,0,0" VerticalAlignment="Top" Width="75" Command="{Binding RegistrirajSeCommand}" />
+        <Button x:Name="btnDohvatiRFID" Content="Dohvati RFID" HorizontalAlignment="Left" Margin="315,66,0,0" VerticalAlignment="Top" Width="75" Command="{Binding DohvatiRFIDCommand}" />
+        <Button x:Name="btnUkljuciKameru" Margin="150,68,0,0" VerticalAlignment="Top" Content="Ukljuci kameru" Height="23" Width="85" Command="{Binding StartSourceCommand}"  />
+        <Button x:Name="btnSnimiSliku" Margin="350,68,0,0" VerticalAlignment="Top" Content="Snimi sliku"  Height="23" Width="75"  Command="{Binding SaveSnapshotCommand}" />
         <GroupBox Margin="407,114,136,88">
-            <Image x:Name="slika" HorizontalAlignment="Left" Height="177" Margin="10,21,0,0" VerticalAlignment="Top" Width="216"/>
+            <Image x:Name="slika" HorizontalAlignment="Left" Height="177" Margin="10,21,0,0" VerticalAlignment="Top" Width="216" Source="{Binding Image}"/>
 
 
         </GroupBox>
